--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "dasecond",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "main.ts",
   "scripts": {
-    "test": "node main.js debug",
-    "start": "node main.js"
+    "start": "ts-node src/main.ts",
+    "test": "ts-node src/main.ts debug"
+  },
+  "dependencies": {
+    "discord.js": "^11.6.4",
+    "dotenv": "^6.2.0",
+    "inversify": "^5.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^11.9.4",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.0.3",
+    "tslint": "^5.20.1",
+    "typescript": "^3.9.9"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "discord.js": "11.5.1",
-    "colors": "1.3.3"
-  }
+  "license": "ISC"
 }
