--- a/src/res/config.json
+++ b/src/res/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "token",
+    "token": "NjE3Nzc4NzIzODg1Njc4NjA4.XWwFRQ.7jIRkubaGRQDYn9JhzU8vRLosxQ",
     "owner": "207589137790795787",
     "prefix": ":"
 }
