--- a/src/res/config.json
+++ b/src/res/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "NjE3Nzc4NzIzODg1Njc4NjA4.XWwFRQ.hHafZ4foW0sbwegTSDWHfwCg1Kw",
+    "token": "token",
     "owner": "207589137790795787",
-    "prefix": ":"
+    "prefix": "!"
 }
